# DBDaemon

./: .dockerignore  .gitignore  .vc.yaml  Cargo.toml  Dockerfile  Makefile  catalog-info.yaml  devspace.yaml
dbdaemon/: Cargo.toml
dbdaemon-api/: Cargo.toml
dbdaemon-api/src/: backend.rs  lib.rs  main.rs
dbdaemon-types/: Cargo.toml
dbdaemon-types/src/: lib.rs  operation.rs
dbdaemon/src/: agent.rs  backend.rs  hash_value.rs  lib.rs  main.rs
dbdaemon/src/daemon/: data_read.rs  data_write.rs  dbdaemon.rs  dual_versioned_data.rs  error.rs  filters.rs  mod.rs  modify.rs  schema_table.rs  single_versioned_data.rs  state.rs  table_data.rs  table_mapping.rs  table_read.rs  table_state.rs  table_write.rs  updates.rs
dbdaemon/src/database/: backend.rs  cache.rs  mariadb.rs  mod.rs
dbdaemon/src/database/elastic/: backend.rs  bulk_op.rs  error.rs  mod.rs  refresh.rs  requests.rs  responses.rs  utils.rs
docs/: readme.md
node-connector/: Makefile  db_connector.tmpl.js  index.js  monitored-hosts-table-value.json  monitored-hosts-value.json  monitored-hosts.json  package-lock.json  package.json  testsuite.js
